# fastmcp_websockets_example

./: README.md  client.py  pyproject.toml  requirements.txt  server.py
