[project]
name = "fastmcp-websockets-example"
version = "0.1.0"
description = "A simple example of an MCP websocket server-client relationship using FastMCP and FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0,<0.116.0",
    "uvicorn[standard]>=0.27.0,<0.35.0",
    "fastmcp>=2.2.0,<2.3.0",
    "websockets>=12.0,<16.0",
    "starlette>=0.31.0,<0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "black>=23.0.0,<24.0.0",
    "ruff>=0.0.270,<0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
